--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="britton.brandyn.notetaking.MainActivityFragment"
+    android:layout_marginTop="?android:attr/actionBarSize"
+    tools:context="britton.brandyn.notetaking.ui.fragments.NotesFragment"
     tools:showIn="@layout/activity_main">
 
     <ListView
-        android:layout_width="368dp"
-        android:layout_height="439dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/lv_notes"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:visibility="visible"
+        app:layout_constraintDimensionRatio="16:9"
+        tools:listitem="@layout/note_list_item" />
+</FrameLayout>
