--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="britton.brandyn.notetaking.MainActivity">
+    tools:context="britton.brandyn.notetaking.ui.activities.MainActivity">
+    <item
+        android:id="@+id/action_add_note"
+        android:icon="@drawable/ic_add"
+        android:title="@string/add_item"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="9999"/>
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
