--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="8dp"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorAccent">
 
     </FrameLayout>
 
