Add Note Fragment
* Added fragment to display individual notes
* Updated doa to handle more cases
* Added ability to complete tasks within the new NoteFragment
* Now only showing non completed notes
* Renamed fragments for clarity (as well as layout names)

--- a/app/src/main/res/layout/fragment_notes_home.xml
+++ b/app/src/main/res/layout/fragment_notes_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="?android:attr/actionBarSize"
-    tools:context="britton.brandyn.notetaking.ui.fragments.NotesFragment"
+    tools:context="britton.brandyn.notetaking.ui.fragments.NotesHomeFragment"
     tools:showIn="@layout/activity_main">
 
     <ListView
