--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -3,24 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="?android:attr/actionBarSize"
+    android:layout_marginTop="192dp"
     android:padding="16dp"
     tools:context="britton.brandyn.notetaking.ui.fragments.NoteFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
-        android:id="@+id/tv_note_display_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="4dp"
-        android:text="@string/title"
-        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="4dp">
+        android:paddingLeft="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +23,6 @@
                 android:id="@+id/tv_note_display_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:text="@string/description" />
         </LinearLayout>
     </ScrollView>
